edit footer banner homepage index

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 						href="javascript:;"></a>
 				</div>
 			</div>
-			<section class="offer-grid-container attractions cross-sell-banner">
+			<!-- <section class="offer-grid-container attractions cross-sell-banner">
 				<!-- <h2>Attractions</h2>
 			<div class="desc">Check out Hong Kong Tourism Board’s specially curated offers.</div> -->
 				<!-- <div class="offer-list-grid-container is-landing swiper-container top-right">
@@ -264,7 +264,7 @@
 				<div class="swiper-button-prev"></div>
 				<div class="swiper-button-next"></div>
 			</div> -->
-			</section>
+			<!-- </section> -->
 			<section class="offer-grid-container food-and-drink cross-sell-banner">
 				<!-- <h2>Food & Drink</h2>
 			<div class="desc">Check out Hong Kong Tourism Board’s specially curated offers.</div> -->
@@ -375,44 +375,52 @@
 				<div style="position:relative">
 					<div class="promotion-banner swiper-container">
 						<div class="swiper-wrapper">
-							<figure class="swiper-slide" style="background-color:#FCC300; color:#072F54;">
+							<figure class="swiper-slide is-full-width" data-alias="http://www.unionpayintl.com/cardholderServ/serviceCenter/merchant?country=10060401&amp;offerFlag=1&amp;countryFlag=1&amp;language=cn&amp;globalCard=y" data-swiper-slide-index="0" style="width: 1577px;">
 								<div class="banner">
 									<div class="img-container">
-										<div class="slide-inner" href="#" target="_blank"
-											style="background-image:url(assets/images/common/banner-expedia.jpg)"></div>
-										<img src="assets/images/common/banner-expedia.jpg"
-											alt="Lorem ipsum dolor sit amet ksjqi askadj consectetura dipiscing elit kodq">
+										<a class="slide-inner multiDeviceBg" href="http://www.unionpayintl.com/cardholderServ/serviceCenter/merchant?country=10060401&amp;offerFlag=1&amp;countryFlag=1&amp;language=cn&amp;globalCard=y" target="_blank" style="background-image:url(assets/images/banner/UnionPay_Full_SC_V2-i.jpg)" data-src-desktop="assets/images/banner/UnionPay_Full_SC_V2-i.jpg" data-src-mobile="assets/images/banner/UnionPay_Full_SC_V2-i.jpg"></a>
+										<img class="multiDeviceImg" data-src-desktop="assets/images/banner/UnionPay_Full_SC_V2-i.jpg" data-src-mobile="assets/images/banner/UnionPay_Full_SC_V2-i.jpg" alt="" src="assets/images/banner/UnionPay_Full_SC_V2-i.jpg">
 									</div>
-								</div>
-								<div class="detail">
-									<div class="top">
-										<div class="merchant-logo"><img src="assets/images/common/logo-expedia.png"
-												alt="EXPEDIA"><span>EXPEDIA</span></div>
-										<p class="description">Lorem ipsum dolor sit amet ksjqi askadj consectetura
-											dipiscing elit kodq</p>
-									</div><a class="btn-cta" style="background-color:#072F54; color:#FFF;" href="#"
-										target="_blank"><span class="label icon-arrow-top-right">Details</span><span
-											class="hover icon-arrow-top-right">Details</span></a>
 								</div>
 							</figure>
-							<figure class="swiper-slide" style="background-color:#006565; color:#FFF;">
+							<figure class="swiper-slide swiper-slide-active" style="color: rgb(247, 182, 0); background: rgb(26, 31, 113); width: 1577px;" data-alias="https://www.visa.com.cn/zh_cn/visa-offers-and-perks/?redemptionCountry=100&amp;category=94" data-swiper-slide-index="1">
 								<div class="banner">
 									<div class="img-container">
-										<div class="slide-inner" href="#" target="_self"
-											style="background-image:url(assets/images/common/offer-1.jpg)"></div><img
-											src="assets/images/common/offer-1.jpg"
-											alt="2 Lorem ipsum dolor sit amet ksjqi askadj consectetura dipiscing elit kodq">
+										<div class="slide-inner" style="background-image:url(assets/images/banner/VISA_Banner_3.jpg)"></div>
+										<img src="assets/images/banner/VISA_Banner_3.jpg" alt="从小酌相聚 到星级盛宴。Visa 精选佳肴高达七五折">
 									</div>
 								</div>
 								<div class="detail">
 									<div class="top">
-										<div class="merchant-logo"><img src="assets/images/common/logo-cx.png"
-												alt="CATHAY PACIFIC"><span>CATHAY PACIFIC</span></div>
-										<p class="description">2 Lorem ipsum dolor sit amet ksjqi askadj consectetura
-											dipiscing elit kodq</p>
-									</div><a class="btn-cta" style="background-color:#FFF; color:#006565;" href="#"
-										target="_self"><span class="label">Details</span><span
-											class="hover">Details</span></a>
+											<div class="merchant-logo">
+													<img src="assets/images/banner/Visa_Logo.png" alt="Visa">
+																			<span>Visa</span>
+											</div>
+										<p class="description">从小酌相聚 到星级盛宴。Visa 精选佳肴高达七五折</p>
+									</div>
+									<a class="btn-cta" style="background:#F7B600;color:#1A1F71;" href="https://www.visa.com.cn/zh_cn/visa-offers-and-perks/?redemptionCountry=100&amp;category=94" target="_blank">
+										<span class="label">DETAILS</span><span class="hover">DETAILS</span>
+									</a>
+								</div>
+							</figure>
+							<figure class="swiper-slide swiper-slide-active" style="color: rgb(255, 255, 255); background: rgb(0, 0, 0); width: 1577px;" data-alias="https://specials.priceless.com/zh-hk/offers/兰桂坊?Oid=201910160005&amp;issuerId=&amp;productId=" data-swiper-slide-index="2">
+								<div class="banner">
+									<div class="img-container">
+										<div class="slide-inner" style="background-image:url(assets/images/banner/Master_Banner_1.png)"></div>
+										<img src=assets/images/banner/Master_Banner_1.png" alt="发掘与众不同的体验，每一刻都将成为您无价的回忆。">
+									</div>
+								</div>
+								<div class="detail">
+									<div class="top">
+											<div class="merchant-logo">
+													<img src="assets/images/banner/Master_Logo.png" alt="Mastercard®">
+																			<span>Mastercard®</span>
+											</div>
+										<p class="description">发掘与众不同的体验，每一刻都将成为您无价的回忆。</p>
+									</div>
+									<a class="btn-cta" style="background:#FFFFFF;color:#000000;" href="https://specials.priceless.com/zh-hk/offers/兰桂坊?Oid=201910160005&amp;issuerId=&amp;productId=" target="_blank">
+										<span class="label">DETAILS</span><span class="hover">DETAILS</span>
+									</a>
 								</div>
 							</figure>
 						</div>
