--- a/dining.html
+++ b/dining.html
@@ -241,7 +241,7 @@
                                     </div>
                                 </div>
                             </a></div> 
-<div class="offer-block is-onscreen" data-category="Other Cuisine" data-district="null"
+<!-- <div class="offer-block is-onscreen" data-category="Other Cuisine" data-district="null"
                             data-region="" data-offerid="ENHK_Dine_999" style="transition-delay: 100ms;"><a
                                 href="dining/food0999.html"
                                 data-alias="ENHK_Dine_999">
@@ -256,7 +256,7 @@
                                 <div class="offer-detail">
                                     <p class="name">Win 30,000 miles with your spending in #AmexBacksHK Weekly Lucky Draw</p>
                                 </div>
-                            </a></div> 
+                            </a></div> -->
 <div class="offer-block is-onscreen" data-category="" data-district="null"
                             data-region="" data-offerid="ENHK_Dine_1006" style="transition-delay: 100ms;"><a
                                 href="dining/food1006.html"
