--- a/shopping.html
+++ b/shopping.html
@@ -170,7 +170,7 @@
                                     </div>
                                 </div>
                             </a></div>
-                        <div class="offer-block is-onscreen" data-category="General Merchandise"
+                        <!-- <div class="offer-block is-onscreen" data-category="General Merchandise"
                             data-district="Diamond Hill,Ma On Shan,Lok Fu,Tsim Sha Tsui,Mong Kok,Tin Shui Wai,Lok Ma Chau,Tuen Mun,Aberdeen,Sheung Shui,Chai Wan,Sha Tin,Tsuen Wan,Tsing Yi,Quarry Bay,San Po Kong,Tai Kok Tsui,Yuen Long,Tung Chung,Central,The Peak,Tai Po,North Point,Kowloon Bay,Hung Hom,Yau Ma Tei,Causeway Bay,Ngau Tau Kok,Tseung Kwan O,Yau Tong,Wan Chai,Kwun Tong,Jordan,Kowloon City,Sham Shui Po,Sheung Wan,Western District,Wong Tai Sin,Kwai Chung"
                             data-region="Kowloon,New Territories,Hong Kong Island,Outlying Islands"
                             data-offerid="ENHK_Shop_999" style="transition-delay: 100ms;"><a href="shops/shop0999.html"
@@ -189,7 +189,7 @@
                                     <p class="name">Win 30,000 miles with your spending in #AmexBacksHK Weekly Lucky
                                         Draw</p>
                                 </div>
-                            </a></div>
+                            </a></div> -->
                         <div class="offer-block is-onscreen" data-category="Foodstuffs - Candy, Snacks & Cake shops"
                             data-district="Diamond Hill,Ma On Shan,Lok Fu,Tsim Sha Tsui,Mong Kok,Tin Shui Wai,Lok Ma Chau,Tuen Mun,Aberdeen,Sheung Shui,Chai Wan,Sha Tin,Tsuen Wan,Tsing Yi,Quarry Bay,San Po Kong,Tai Kok Tsui,Yuen Long,Tung Chung,Central,The Peak,Tai Po,North Point,Kowloon Bay,Hung Hom,Yau Ma Tei,Causeway Bay,Ngau Tau Kok,Tseung Kwan O,Yau Tong,Wan Chai,Kwun Tong,Jordan,Kowloon City,Sham Shui Po,Sheung Wan,Western District,Wong Tai Sin,Kwai Chung"
                             data-region="Kowloon,New Territories,Hong Kong Island,Outlying Islands"
