new index homepage

--- a/index.html
+++ b/index.html
@@ -288,96 +288,90 @@
 					</div>
 					<div class="offer-list-grid swiper-wrapper" data-offer-type="other">
 						<div class="offer-block-grid swiper-slide"><a href="dining/food0026.html" target="_self">
-								<!-- <div class="flag">50% discount on Barbecued Pork with Honey Sauce (dine-in only)</div> -->
-								<div class="thumbnail"><img class="lazy" src
-										data-original="assets\images\offer-details\EN_Dine_26_01.jpg"
-										alt="50% discount on Barbecued Pork with Honey Sauce (dine-in only)">
-									<div class="merchant-logo"><img
-											src="assets/images/offer-details/EN_Dine_26_logo.png"
-											alt="Seventh Son Restaurant - The Wharney Guang Dong Hotel HK"></div>
-									<h3 class="merchant">Seventh Son Restaurant - The Wharney Guang Dong Hotel HK</h3>
-								</div>
-								<div class="offer-detail">
-									<p class="name">50% discount on Barbecued Pork with Honey Sauce (dine-in only)
-									</p>
-								</div>
-							</a></div>
-						<div class="offer-block-grid swiper-slide"><a href="dining/food0027.html" target="_self">
-								<!-- <div class="flag">Buy one, get one free Premium Seasonal Kaiseki Menu</div> -->
-								<div class="thumbnail"><img class="lazy" src
-										data-original="assets\images\offer-details\EN_Dine_27_01.jpg"
-										alt="Buy one, get one free Premium Seasonal Kaiseki Menu">
-									<div class="merchant-logo"><img
-											src="assets/images/offer-details/EN_Dine_27_logo.png" alt="Ta-ke"></div>
-									<h3 class="merchant">Ta-ke</h3>
-								</div>
-								<div class="offer-detail">
-									<p class="name">Buy one, get one free Premium Seasonal Kaiseki Menu
-									</p>
-								</div>
-							</a></div>
-						<div class="offer-block-grid swiper-slide"><a href="dining/food0049.html" target="_self">
-								<!-- <div class="flag">Around 34% discount on Hello Hong Kong Holiday@Home Menu (for 4 persons)</div> -->
-								<div class="thumbnail"><img class="lazy" src
-										data-original="assets\images\offer-details\EN_Dine_49_04.jpg"
-										alt="Around 34% discount on Hello Hong Kong Holiday@Home Menu (for 4 persons)">
-									<div class="merchant-logo"><img
-											src="assets/images/offer-details/EN_Dine_49_logo.jpg" alt="Jardin de Jade">
-									</div>
-									<h3 class="merchant">Jardin de Jade</h3>
-								</div>
-								<div class="offer-detail">
-									<p class="name">Around 34% discount on Hello Hong Kong Holiday@Home Menu (for 4
-										persons)
-									</p>
-								</div>
-							</a></div>
-						<div class="offer-block-grid swiper-slide"><a href="dining/food0051.html" target="_self">
-								<!-- <div class="flag">Buy one, get one free Signature Dishes & Stew Set (for 2 persons)</div> -->
-								<div class="thumbnail"><img class="lazy" src
-										data-original="assets\images\offer-details\EN_Dine_51_01.jpg"
-										alt="Buy one, get one free Signature Dishes & Stew Set (for 2 persons)">
-									<div class="merchant-logo"><img
-											src="assets/images/offer-details/EN_Dine_51_logo.jpg" alt="Ser Wong Fun">
-									</div>
-									<h3 class="merchant">Ser Wong Fun</h3>
-								</div>
-								<div class="offer-detail">
-									<p class="name">Buy one, get one free Signature Dishes & Stew Set (for 2 persons)
-									</p>
-								</div>
-							</a></div>
-						<div class="offer-block-grid swiper-slide"><a href="dining/food0999.html" target="_self">
-								<!-- <div class="flag">Win 30,000 miles with your spending in #AmexBacksHK Weekly Lucky Draw</div> -->
-								<div class="thumbnail"><img class="lazy" src
-										data-original="assets\images\offer-details\EN_Dine_999_01_amex.jpg"
-										alt="Win 30,000 miles with your spending in #AmexBacksHK Weekly Lucky Draw">
-									<div class="merchant-logo"><img
-											src="assets/images/offer-details/EN_Dine_999_logo_amex.png"
-											alt="American Express"></div>
-									<h3 class="merchant">American Express</h3>
-								</div>
-								<div class="offer-detail">
-									<p class="name">Win 30,000 miles with your spending in #AmexBacksHK Weekly Lucky
-										Draw
-									</p>
-								</div>
-							</a></div>
-						<div class="offer-block-grid swiper-slide"><a href="dining/food1006.html" target="_self">
-								<!-- <div class="flag">HK$50 cash coupon upon dine-in purchase at every HK$200</div> -->
-								<div class="thumbnail"><img class="lazy" src
-										data-original="assets\images\offer-details\En_Dine_1006_01.jpg"
-										alt="HK$50 cash coupon upon dine-in purchase at every HK$200">
-									<div class="merchant-logo"><img
-											src="assets/images/offer-details/En_Dine_1006_logo.png"
-											alt="LHGroup & Kabushikigaisha Limited"></div>
-									<h3 class="merchant">LHGroup & Kabushikigaisha Limited</h3>
-								</div>
-								<div class="offer-detail">
-									<p class="name">HK$50 cash coupon upon dine-in purchase at every HK$200
-									</p>
-								</div>
-							</a></div>
+							<div class="flag">BUY 1 GET 1 FREE</div> 
+							<div class="thumbnail"><img class="lazy" src
+									data-original="assets\images\offer-details\EN_Dine_26_01.jpg"
+									alt="50% discount on Barbecued Pork with Honey Sauce (dine-in only)">
+								<div class="merchant-logo"><img
+										src="assets/images/offer-details/EN_Dine_26_logo.png"
+										alt="Seventh Son Restaurant - The Wharney Guang Dong Hotel HK"></div>
+								<h3 class="merchant">Seventh Son Restaurant - The Wharney Guang Dong Hotel HK</h3>
+							</div>
+							<div class="offer-detail">
+								<p class="name">50% discount on Barbecued Pork with Honey Sauce (dine-in only)</p>
+							</div>
+						</a></div> 
+<div class="offer-block-grid swiper-slide"><a href="dining/food0027.html" target="_self">
+							<div class="flag">BUY 1 GET 1 FREE</div> 
+							<div class="thumbnail"><img class="lazy" src
+									data-original="assets\images\offer-details\EN_Dine_27_01.jpg"
+									alt="Buy one, get one free Premium Seasonal Kaiseki Menu">
+								<div class="merchant-logo"><img
+										src="assets/images/offer-details/EN_Dine_27_logo.png"
+										alt="Ta-ke"></div>
+								<h3 class="merchant">Ta-ke</h3>
+							</div>
+							<div class="offer-detail">
+								<p class="name">Buy one, get one free Premium Seasonal Kaiseki Menu</p>
+							</div>
+						</a></div> 
+<div class="offer-block-grid swiper-slide"><a href="dining/food0049.html" target="_self">
+							<div class="flag"></div> 
+							<div class="thumbnail"><img class="lazy" src
+									data-original="assets\images\offer-details\EN_Dine_49_04.jpg"
+									alt="Around 34% discount on Hello Hong Kong Holiday@Home Menu (for 4 persons)">
+								<div class="merchant-logo"><img
+										src="assets/images/offer-details/EN_Dine_49_logo.jpg"
+										alt="Jardin de Jade"></div>
+								<h3 class="merchant">Jardin de Jade</h3>
+							</div>
+							<div class="offer-detail">
+								<p class="name">Around 34% discount on Hello Hong Kong Holiday@Home Menu (for 4 persons)</p>
+							</div>
+						</a></div> 
+<div class="offer-block-grid swiper-slide"><a href="dining/food0051.html" target="_self">
+							<div class="flag">BUY 1 GET 1 FREE</div> 
+							<div class="thumbnail"><img class="lazy" src
+									data-original="assets\images\offer-details\EN_Dine_51_01.jpg"
+									alt="Buy one, get one free Signature Dishes & Stew Set (for 2 persons)">
+								<div class="merchant-logo"><img
+										src="assets/images/offer-details/EN_Dine_51_logo.jpg"
+										alt="Ser Wong Fun"></div>
+								<h3 class="merchant">Ser Wong Fun</h3>
+							</div>
+							<div class="offer-detail">
+								<p class="name">Buy one, get one free Signature Dishes & Stew Set (for 2 persons)</p>
+							</div>
+						</a></div>
+<div class="offer-block-grid swiper-slide"><a href="dining/food1140.html" target="_self">
+							<div class="flag"></div> 
+							<div class="thumbnail"><img class="lazy" src
+									data-original="assets\images\offer-details\Dine_1140_01.jpg"
+									alt="Promotion price of HK$1500 (plus 10% service charge) for designated set menu">
+								<div class="merchant-logo"><img
+										src="assets/images/offer-details/Dine_1140_logo.png"
+										alt="Bo Innovation"></div>
+								<h3 class="merchant">Bo Innovation</h3>
+							</div>
+							<div class="offer-detail">
+								<p class="name">Promotion price of HK$1500 (plus 10% service charge) for designated set menu</p>
+							</div>
+						</a></div> 
+<div class="offer-block-grid swiper-slide"><a href="dining/food1161.html" target="_self">
+							<div class="flag"></div> 
+							<div class="thumbnail"><img class="lazy" src
+									data-original="assets\images\offer-details\Dine_1161_01.jpg"
+									alt="Promotion price of HK$15 for Latte (S)">
+								<div class="merchant-logo"><img
+										src="assets/images/offer-details/Dine_1161_logo.png"
+										alt="McCafé"></div>
+								<h3 class="merchant">McCafé</h3>
+							</div>
+							<div class="offer-detail">
+								<p class="name">Promotion price of HK$15 for Latte (S)</p>
+							</div>
+						</a></div> 
+
 
 					</div>
 				</div>
