--- a/shops/shop0001.html
+++ b/shops/shop0001.html
@@ -129,7 +129,7 @@
                     <div class="quality-provider">
                         <div class="offer-quality">
                             <div class="detail">
-                                <div class="logo"><img src="assets/images/common/logo-qts.png"
+                                <div class="logo"><img src="../assets/images/common/logo-qts.png"
                                         alt="Quality Tourism Services  Scheme Shops"></div><span>Quality
                                     Tourism Services Scheme Shops</span>
                             </div>
