edit dining homepage

--- a/dining.html
+++ b/dining.html
@@ -266,7 +266,7 @@
                                         Draw</p>
                                 </div>
                             </a></div> -->
-                        <div class="offer-block is-onscreen" data-category="" data-district="null" data-region=""
+                        <!-- <div class="offer-block is-onscreen" data-category="" data-district="null" data-region=""
                             data-offerid="ENHK_Dine_1006" style="transition-delay: 100ms;"><a
                                 href="dining/food1006.html" data-alias="ENHK_Dine_1006">
                                 <div class="thumbnail">
@@ -282,7 +282,7 @@
                                 <div class="offer-detail">
                                     <p class="name">HK$50 cash coupon upon dine-in purchase at every HK$200</p>
                                 </div>
-                            </a></div>
+                            </a></div> -->
                         <div class="offer-block is-onscreen" data-category="Other Cuisine" data-district="null"
                             data-region="" data-offerid="ENHK_Dine_1140" style="transition-delay: 100ms;"><a
                                 href="dining/food1140.html" data-alias="ENHK_Dine_1140" class=" has-quality-logo">
